--- a/b101110044.ipynb
+++ b/b101110044.ipynb
@@ -2,19 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "['醫師']\n",
+      "['啊最近的狀況還好嗎?民眾']\n",
+      "['還好啦。醫師']\n",
+      "['還好啦齁，一樣肚子還是不舒服', '...']\n"
      ]
     }
    ],
    "source": [
-    "print('hello world')"
+    "sen = '''醫師:啊最近的狀況還好嗎?民眾:還好啦。醫師:還好啦齁，一樣肚子還是不舒服 ...'''\n",
+    "sen1 = sen.split(':')\n",
+    "for ele in sen1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['醫師:啊最近的狀況還好嗎?民眾:還好啦。醫師:還好啦齁，一樣肚子還是不舒服', '...']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "sen = '''醫師:啊最近的狀況還好嗎?民眾:還好啦。醫師:還好啦齁，一樣肚子還是不舒服 ...'''\n",
+    "sen = sen.split()\n",
+    "sen"
    ]
   }
  ],
