--- a/b101110044.ipynb
+++ b/b101110044.ipynb
@@ -2,48 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['醫師']\n",
-      "['啊最近的狀況還好嗎?民眾']\n",
-      "['還好啦。醫師']\n",
-      "['還好啦齁，一樣肚子還是不舒服', '...']\n"
-     ]
-    }
-   ],
-   "source": [
-    "sen = '''醫師:啊最近的狀況還好嗎?民眾:還好啦。醫師:還好啦齁，一樣肚子還是不舒服 ...'''\n",
-    "sen1 = sen.split(':')\n",
-    "for ele in sen1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['醫師:啊最近的狀況還好嗎?民眾:還好啦。醫師:還好啦齁，一樣肚子還是不舒服', '...']"
+       "'啊最近的狀況還好嗎'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "sen = '''醫師:啊最近的狀況還好嗎?民眾:還好啦。醫師:還好啦齁，一樣肚子還是不舒服 ...'''\n",
-    "sen = sen.split()\n",
-    "sen"
+    "a = ':'\n",
+    "b = '?'\n",
+    "c = '。'\n",
+    "i = 0\n",
+    "j= 0\n",
+    "k = 0\n",
+    "\n",
+    "part1 = ''\n",
+    "for j in range(len(sen)):\n",
+    "    if sen[j] == b:\n",
+    "        for i in range(len(sen)):\n",
+    "            if sen[i] == a:\n",
+    "                part1 = part1 + sen[i+1:j]\n",
+    "                i += 1\n",
+    "part1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'民眾:還好啦'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "part2 = ''\n",
+    "\n",
+    "for j in range(len(sen)):\n",
+    "    if sen[j] == c:\n",
+    "        for i in range(len(sen)):\n",
+    "            if sen[i] == b:\n",
+    "                part2 = part2 + sen[i+1:j]\n",
+    "                i += 1\n",
+    "\n",
+    "part2"
    ]
   }
  ],
