--- a/練習區/2/try1.ipynb
+++ b/練習區/2/try1.ipynb
@@ -2,11 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請使用阿拉伯數字輸入\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'western_year' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m     date \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(western_year) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(month) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(day)\n\u001b[0;32m     12\u001b[0m     \u001b[39mprint\u001b[39m(date)\n\u001b[1;32m---> 13\u001b[0m date_tran(year, month, day)\n",
+      "Cell \u001b[1;32mIn[8], line 11\u001b[0m, in \u001b[0;36mdate_tran\u001b[1;34m(year, month, day)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m     10\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m請使用阿拉伯數字輸入\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 11\u001b[0m date \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(western_year) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(month) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(day)\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(date)\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'western_year' where it is not associated with a value"
+     ]
+    }
+   ],
    "source": [
-    "year = input(\"歡迎使用日期轉換器，請輸入國曆年\")\n",
+    "year = input(\"歡迎使用日期轉換器，請輸入日期\")\n",
     "month = input(\"請輸入入國曆月\")\n",
     "day = input(\"請輸入入國曆日\")\n",
     "def date_tran(year, month, day):\n",
@@ -17,7 +37,8 @@
     "    except:\n",
     "        print(\"請使用阿拉伯數字輸入\")\n",
     "    date = str(western_year) + \"/\" + str(month) + \"/\" + str(day)\n",
-    "    print(date)"
+    "    print(date)\n",
+    "date_tran(year, month, day)"
    ]
   }
  ],
