--- a/練習區/2/try3.ipynb
+++ b/練習區/2/try3.ipynb
@@ -36,13 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -50,6 +43,56 @@
     "for i in date:\n",
     "    if i.isdigit():\n",
     "        x_year = i"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "先列出列表?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "先找出數字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "x_year = 0\n",
+    "for i in range(len(date)):\n",
+    "    for x in date:\n",
+    "        if type(x) == int:\n",
+    "            x_year = i\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(date)):\n",
+    "    if type(date[i]) == int:\n",
+    "        x_year = i\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        i += 1\n",
+    "for j in range(x_year+1, len(date)):\n",
+    "    if type(date) == int:\n",
+    "        x_month = j"
    ]
   }
  ],
