列出哪些是數字

--- a/練習區/2/try3.ipynb
+++ b/練習區/2/try3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,24 +63,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0\n",
+    "#列出哪些是數字\n",
+    "date = \"民國108年11月19日下午9點30分\"\n",
+    "x_number = 0\n",
     "x_year = 0\n",
+    "x_month = 0\n",
+    "x_date = 0\n",
+    "x_list = []\n",
     "for i in range(len(date)):\n",
-    "    for x in date:\n",
-    "        if type(x) == int:\n",
-    "            x_year = i\n",
-    "            i += 1\n",
-    "        else:\n",
-    "            i += 1"
+    "    if date[i].isdigit() is True:\n",
+    "        x_number = i\n",
+    "        x_list.append(x_number)\n",
+    "    else:\n",
+    "        i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = \"民國108年11月19日下午9點30分\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +127,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.2"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
