--- a/練習區/2/try3.ipynb
+++ b/練習區/2/try3.ipynb
@@ -83,17 +83,145 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "date = \"民國108年11月19日下午9點30分\"\n"
+    "僅限於找出三組數字"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = \"民國108年11月19日下午9點30分\"\n",
+    "start_year = 0\n",
+    "start_month = 0\n",
+    "start_day = 0\n",
+    "end_year = 0\n",
+    "end_month = 0\n",
+    "end_day = 0\n",
+    "#找出年份的開始與結束\n",
+    "for i in range(len(date)):\n",
+    "    if date[i].isdigit() is True:\n",
+    "        start_year = i\n",
+    "        break\n",
+    "    else:\n",
+    "        i += 1\n",
+    "for j in range(start_year, len(date)):\n",
+    "    if date[j].isdigit() is False:\n",
+    "        end_year = j - 1\n",
+    "        break\n",
+    "    \n",
+    "#找出月份的開始與結束\n",
+    "i = 0\n",
+    "j = 0\n",
+    "for i in range(end_year+1, len(date)):\n",
+    "    if date[i].isdigit() is True:\n",
+    "        start_month = i\n",
+    "        break\n",
+    "    else:\n",
+    "        i += 1\n",
+    "for j in range(start_month, len(date)):\n",
+    "    if date[j].isdigit() is False:\n",
+    "        end_month = j - 1\n",
+    "        break\n",
+    "\n",
+    "#找出日期的開始與結束\n",
+    "i = 0\n",
+    "j = 0\n",
+    "for i in range(end_month+1, len(date)):\n",
+    "    if date[i].isdigit() is True:\n",
+    "        start_day = i\n",
+    "        break\n",
+    "    else:\n",
+    "        i += 1\n",
+    "for j in range(start_day, len(date)):\n",
+    "    if date[j].isdigit() is False:\n",
+    "        end_day = j - 1\n",
+    "        break\n",
+    "\n",
+    "ROC_year = date[start_year:end_year+1]\n",
+    "western_year = int(ROC_year) + 1911"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "找出所有數字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['10']\n",
+      "['108']\n",
+      "['108', '1']\n",
+      "['108', '11']\n",
+      "['108', '11', '1']\n",
+      "['108', '11', '19']\n",
+      "['108', '11', '19', '', '', '9']\n",
+      "['108', '11', '19', '', '', '9', '3']\n",
+      "['108', '11', '19', '', '', '9', '30']\n"
+     ]
+    }
+   ],
+   "source": [
+    "date = \"民國108年11月19日下午9點30分\"\n",
+    "list_of_number = []\n",
+    "j = 0\n",
+    "for i in range(len(date)):\n",
+    "    if (date[i].isdigit()) and (list_of_number == []) is True:\n",
+    "        list_of_number.append(date[i])\n",
+    "        i += 1\n",
+    "    elif (date[i].isdigit()) is True and (list_of_number == []) is False:\n",
+    "        list_of_number[j-1] = list_of_number[j-1] + date[i]\n",
+    "        print(list_of_number)\n",
+    "    elif (date[i].isdigit()) is False and (list_of_number == []) is True:\n",
+    "        i += 1\n",
+    "    elif (date[i].isdigit()) is False and (list_of_number == []) is False:\n",
+    "        list_of_number.append(\"\")\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A string that contains the date and time.\n",
+    "date = \"民國108年11月19日下午9點30分\"\n",
+    "list_of_number = []\n",
+    "\n",
+    "for i in range(len(date)):\n",
+    "    if date[i].isdigit() is False and list_of_number == [] is False:\n",
+    "        end_digit = i - 1\n",
+    "        break\n",
+    "    elif date[i].isdigit() is False and list_of_number == [] is True:\n",
+    "        i += 1\n",
+    "    elif date[i].isdigit() is True and list_of_number == [] is True:\n",
+    "        start_digit = i\n",
+    "        list_of_number.append(date[start_digit])\n",
+    "        i += 1\n",
+    "    elif date[i].isdigit() is True and list_of_number == [] is False:\n",
+    "        list_of_number[i] = list_of_number[i] + date[i]\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
