j不對，數目怪怪的

--- a/練習區/2/try3.ipynb
+++ b/練習區/2/try3.ipynb
@@ -157,22 +157,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "狀況三\n",
+      "[]\n",
+      "狀況三\n",
+      "[]\n",
+      "狀況一\n",
+      "['1']\n",
+      "狀況二\n",
       "['10']\n",
+      "狀況二\n",
       "['108']\n",
+      "狀況四\n",
+      "['108', '']\n",
+      "狀況二\n",
       "['108', '1']\n",
+      "狀況二\n",
       "['108', '11']\n",
+      "狀況四\n",
+      "['108', '11', '']\n",
+      "狀況二\n",
       "['108', '11', '1']\n",
+      "狀況二\n",
       "['108', '11', '19']\n",
+      "狀況四\n",
+      "['108', '11', '19', '']\n",
+      "狀況四\n",
+      "['108', '11', '19', '', '']\n",
+      "狀況四\n",
+      "['108', '11', '19', '', '', '']\n",
+      "狀況二\n",
       "['108', '11', '19', '', '', '9']\n",
+      "狀況四\n",
+      "['108', '11', '19', '', '', '9', '']\n",
+      "狀況二\n",
       "['108', '11', '19', '', '', '9', '3']\n",
-      "['108', '11', '19', '', '', '9', '30']\n"
+      "狀況二\n",
+      "['108', '11', '19', '', '', '9', '30']\n",
+      "狀況四\n",
+      "['108', '11', '19', '', '', '9', '30', '']\n"
      ]
     }
    ],
@@ -182,16 +211,23 @@
     "j = 0\n",
     "for i in range(len(date)):\n",
     "    if (date[i].isdigit()) and (list_of_number == []) is True:\n",
+    "        print(\"狀況一\")\n",
     "        list_of_number.append(date[i])\n",
     "        i += 1\n",
+    "        print(list_of_number)\n",
     "    elif (date[i].isdigit()) is True and (list_of_number == []) is False:\n",
+    "        print(\"狀況二\")\n",
     "        list_of_number[j-1] = list_of_number[j-1] + date[i]\n",
     "        print(list_of_number)\n",
     "    elif (date[i].isdigit()) is False and (list_of_number == []) is True:\n",
+    "        print(\"狀況三\")\n",
     "        i += 1\n",
+    "        print(list_of_number)\n",
     "    elif (date[i].isdigit()) is False and (list_of_number == []) is False:\n",
+    "        print(\"狀況四\")\n",
     "        list_of_number.append(\"\")\n",
-    "        i += 1"
+    "        i += 1\n",
+    "        print(list_of_number)"
    ]
   },
   {
@@ -253,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
