--- a/練習區/2/try3.ipynb
+++ b/練習區/2/try3.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -177,31 +177,31 @@
       "狀況四\n",
       "['108', '']\n",
       "狀況二\n",
-      "['108', '1']\n",
+      "['1081', '']\n",
       "狀況二\n",
-      "['108', '11']\n",
+      "['10811', '']\n",
       "狀況四\n",
-      "['108', '11', '']\n",
+      "['10811', '', '']\n",
       "狀況二\n",
-      "['108', '11', '1']\n",
+      "['10811', '1', '']\n",
       "狀況二\n",
-      "['108', '11', '19']\n",
+      "['10811', '19', '']\n",
       "狀況四\n",
-      "['108', '11', '19', '']\n",
+      "['10811', '19', '', '']\n",
       "狀況四\n",
-      "['108', '11', '19', '', '']\n",
+      "['10811', '19', '', '', '']\n",
       "狀況四\n",
-      "['108', '11', '19', '', '', '']\n",
+      "['10811', '19', '', '', '', '']\n",
       "狀況二\n",
-      "['108', '11', '19', '', '', '9']\n",
+      "['10811', '19', '', '', '9', '']\n",
       "狀況四\n",
-      "['108', '11', '19', '', '', '9', '']\n",
+      "['10811', '19', '', '', '9', '', '']\n",
       "狀況二\n",
-      "['108', '11', '19', '', '', '9', '3']\n",
+      "['10811', '19', '', '', '9', '3', '']\n",
       "狀況二\n",
-      "['108', '11', '19', '', '', '9', '30']\n",
+      "['10811', '19', '', '', '9', '30', '']\n",
       "狀況四\n",
-      "['108', '11', '19', '', '', '9', '30', '']\n"
+      "['10811', '19', '', '', '9', '30', '', '']\n"
      ]
     }
    ],
@@ -210,23 +210,21 @@
     "list_of_number = []\n",
     "j = 0\n",
     "for i in range(len(date)):\n",
-    "    if (date[i].isdigit()) and (list_of_number == []) is True:\n",
-    "        print(\"狀況一\")\n",
-    "        list_of_number.append(date[i])\n",
-    "        i += 1\n",
+    "    if (date[i].isdigit()) is False and (list_of_number == []) is True:\n",
+    "        print(\"狀況三\")\n",
+    "        print(list_of_number)\n",
+    "    elif (date[i].isdigit()) is False and (list_of_number == []) is False:\n",
+    "        print(\"狀況四\")\n",
+    "        j += 1\n",
+    "        list_of_number.append('')\n",
     "        print(list_of_number)\n",
     "    elif (date[i].isdigit()) is True and (list_of_number == []) is False:\n",
     "        print(\"狀況二\")\n",
     "        list_of_number[j-1] = list_of_number[j-1] + date[i]\n",
     "        print(list_of_number)\n",
-    "    elif (date[i].isdigit()) is False and (list_of_number == []) is True:\n",
-    "        print(\"狀況三\")\n",
-    "        i += 1\n",
-    "        print(list_of_number)\n",
-    "    elif (date[i].isdigit()) is False and (list_of_number == []) is False:\n",
-    "        print(\"狀況四\")\n",
-    "        list_of_number.append(\"\")\n",
-    "        i += 1\n",
+    "    elif (date[i].isdigit()) and (list_of_number == []) is True:\n",
+    "        print(\"狀況一\")\n",
+    "        list_of_number.append(date[i])\n",
     "        print(list_of_number)"
    ]
   },
