--- a/練習區/2/try3.ipynb
+++ b/練習區/2/try3.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,16 +148,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019/11/19\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['108', '11', '19', '9', '30']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time = \"民國108年11月19日下午9點30分\"\n",
+    "def tran_date():\n",
+    "    import re\n",
+    "    number_list = re.findall(r'(\\d+)', time)\n",
+    "    date_list = [number_list[0], number_list[1], number_list[2]]\n",
+    "    western_year = int(date_list[0]) + 1911\n",
+    "    month = int(date_list[1])\n",
+    "    day = int(date_list[2])\n",
+    "    date = str(western_year) + '/' + str(month) + \"/\" + str(day)\n",
+    "    print(date)\n",
+    "    return number_list\n",
+    "tran_date()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "找出所有數字"
+    "找出所有數字：失敗"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
