--- a/作業繳交區/2/b101110044.ipynb
+++ b/作業繳交區/2/b101110044.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tran_date(x):\n",
     "    import re\n",
-    "    number_list = re.findall(r'(\\d+)', time)\n",
+    "    number_list = re.findall(r'(\\d+)', x)\n",
     "    date_list = list(number_list)\n",
     "    western_year = str(int(date_list[0]) + 1911)\n",
     "    date_list[0] = western_year\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
