--- a/練習區/2/try3.ipynb
+++ b/練習區/2/try3.ipynb
@@ -190,7 +190,201 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "找出所有數字：失敗"
+    "找出所有數字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '', 1, 0, 8, '', 1, 1, '', 1, 9, '', '', '', 9, '', 3, 0, '', 1, 1, '']\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5th try\n",
+    "date = \"民國108年11月19日下午9點30分11秒\"\n",
+    "list_of_str = []\n",
+    "for i in range(len(date)):\n",
+    "    if date[i].isdigit():\n",
+    "        list_of_str.append(int(date[i]))\n",
+    "    else:\n",
+    "        list_of_str.append('')\n",
+    "print(list_of_str)\n",
+    "print(len(list_of_str))\n",
+    "\n",
+    "list2 = []\n",
+    "j = 0\n",
+    "for j in range(len(list_of_str)):\n",
+    "    if j == 0:\n",
+    "        if list_of_str[j] == '':\n",
+    "            continue\n",
+    "        elif list_of_str[j] != '':\n",
+    "            list2.append(list_of_str[j])\n",
+    "            continue\n",
+    "    elif j == len(list_of_str) - 1:\n",
+    "        if list_of_str[j] == '':\n",
+    "            list2.append('')\n",
+    "            continue\n",
+    "        elif list_of_str[j] != '':\n",
+    "            list2.append(list_of_str[j])\n",
+    "            list2.append('')\n",
+    "            continue\n",
+    "    else:\n",
+    "        if list_of_str[j] == '':\n",
+    "            if list_of_str[j + 1] == '':\n",
+    "                continue\n",
+    "            elif list_of_str[j + 1] != '':\n",
+    "                list2.append(list_of_str[j])\n",
+    "        elif list_of_str[j] != '':\n",
+    "            list2.append(list_of_str[j])\n",
+    "\n",
+    "final_list = []\n",
+    "number_count = 0\n",
+    "for k in range(len(list2)):\n",
+    "    if k == 0:\n",
+    "        final_list.append(list2[k])\n",
+    "        number_count += 1\n",
+    "    elif k == len(list2) - 1:\n",
+    "        break\n",
+    "    else:\n",
+    "        if list2[k] == '':\n",
+    "            final_list.append(list2[k])\n",
+    "            number_count += 1\n",
+    "        elif list2[k] != '':\n",
+    "            final_list[number_count-1] = str(final_list[number_count-1]) + str(list2[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['108', '11', '19', '9', '30', '11']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def list_numbers(string):\n",
+    "    list_of_str = []\n",
+    "    for i in range(len(string)):\n",
+    "        if string[i].isdigit():\n",
+    "            list_of_str.append(int(string[i]))\n",
+    "        else:\n",
+    "            list_of_str.append('')\n",
+    "\n",
+    "    list2 = []\n",
+    "    j = 0\n",
+    "    for j in range(len(list_of_str)):\n",
+    "        if j == 0:\n",
+    "            if list_of_str[j] == '':\n",
+    "                continue\n",
+    "            elif list_of_str[j] != '':\n",
+    "                list2.append(list_of_str[j])\n",
+    "                continue\n",
+    "        elif j == len(list_of_str) - 1:\n",
+    "            if list_of_str[j] == '':\n",
+    "                list2.append('')\n",
+    "                continue\n",
+    "            elif list_of_str[j] != '':\n",
+    "                list2.append(list_of_str[j])\n",
+    "                list2.append('')\n",
+    "                continue\n",
+    "        else:\n",
+    "            if list_of_str[j] == '':\n",
+    "                if list_of_str[j + 1] == '':\n",
+    "                    continue\n",
+    "                elif list_of_str[j + 1] != '':\n",
+    "                    list2.append(list_of_str[j])\n",
+    "            elif list_of_str[j] != '':\n",
+    "                list2.append(list_of_str[j])\n",
+    "\n",
+    "    final_list = []\n",
+    "    number_count = 0\n",
+    "    for k in range(len(list2)):\n",
+    "        if k == 0:\n",
+    "            final_list.append(list2[k])\n",
+    "            number_count += 1\n",
+    "        elif k == len(list2) - 1:\n",
+    "            break\n",
+    "        else:\n",
+    "            if list2[k] == '':\n",
+    "                final_list.append(list2[k])\n",
+    "                number_count += 1\n",
+    "            elif list2[k] != '':\n",
+    "                final_list[number_count-1] = str(final_list[number_count-1]) + str(list2[k])\n",
+    "    return final_list\n",
+    "list_numbers(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_numbers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '', 1, 0, 8, '', 1, 1, '', 1, 9, '', '', '', 9, '', 3, 0]\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4th try\n",
+    "date = \"民國108年11月19日下午9點30\"\n",
+    "list_of_numbers = []\n",
+    "for i in range(len(date)):\n",
+    "    if date[i].isdigit():\n",
+    "        list_of_numbers.append(int(date[i]))\n",
+    "    else:\n",
+    "        list_of_numbers.append('')\n",
+    "print(list_of_numbers)\n",
+    "print(len(list_of_numbers))\n",
+    "\n",
+    "j = 0\n",
+    "for j in range(len(list_of_numbers)):\n",
+    "    if j == 0:\n",
+    "        if list_of_numbers[j] == '' and list_of_numbers[j + 1] == '':\n",
+    "            list_of_numbers.remove(list_of_numbers[j])\n",
+    "            continue\n",
+    "        elif list_of_numbers[j] == '' and list_of_numbers[j + 1] != '':\n",
+    "            continue\n",
+    "    elif j == len(list_of_numbers) - 1:\n",
+    "        if list_of_numbers[j] == '':\n",
+    "            break\n",
+    "        elif list_of_numbers[j] != '':\n",
+    "            list_of_numbers.append('')\n",
+    "            break\n",
+    "    else:\n",
+    "        if list_of_numbers[j] == '' and list_of_numbers[j + 1] == '':\n",
+    "            list_of_numbers.remove(list_of_numbers[j])\n",
+    "            continue\n",
+    "        elif list_of_numbers[j] == '' and list_of_numbers[j + 1] != '':\n",
+    "            continue"
    ]
   },
   {
@@ -244,6 +438,7 @@
     }
    ],
    "source": [
+    "# 3rd try \n",
     "date = \"民國108年11月19日下午9點30分\"\n",
     "list_of_number = []\n",
     "j = 0\n",
@@ -272,7 +467,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A string that contains the date and time.\n",
+    "# 2nd try\n",
+    "# A string that contains the date and time.\n",
     "date = \"民國108年11月19日下午9點30分\"\n",
     "list_of_number = []\n",
     "\n",
@@ -297,6 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1st try\n",
     "for i in range(len(date)):\n",
     "    if type(date[i]) == int:\n",
     "        x_year = i\n",
