--- a/作業繳交區/2/b101110044.ipynb
+++ b/作業繳交區/2/b101110044.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 解法1:自創函數"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -157,6 +165,47 @@
    ],
    "source": [
     "get_western_date(\"民國90年6月16日\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 解法2:套用library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tran_date(x):\n",
+    "    import re\n",
+    "    number_list = re.findall(r'(\\d+)', x)\n",
+    "    date_list = list(number_list)\n",
+    "    western_year = str(int(date_list[0]) + 1911)\n",
+    "    date_list[0] = western_year\n",
+    "    return date_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019/11/19\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"民國108年11月19日下午9點30分\"\n",
+    "print(tran_date(x)[0] + '/' + tran_date(x)[1] + '/' + tran_date(x)[2])"
    ]
   }
  ],
